src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Activate_By_Email__c</fullName>
        <description>Email address of the user who activated the IO. We need a text field for the Mail Merge.</description>
        <label>Activate By Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Activated_By_Name__c</fullName>
        <description>Person who activated the IO. We need a text field for the Mail Merge.</description>
        <label>Activated By Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activated_By_Phone__c</fullName>
        <description>Phone number of the user who activated the IO. We need a text field for the Mail Merge.</description>
        <label>Activated By Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ad_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ad Campaign</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>IOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advertiser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Advertiser on the IO</description>
        <inlineHelpText>Advertiser on the IO</inlineHelpText>
        <label>Advertiser</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IOs</relationshipLabel>
        <relationshipName>IOs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_Discount__c</fullName>
        <label>Agency Commission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Agency_Email__c</fullName>
        <inlineHelpText>Email address of the agency contact for this IO.</inlineHelpText>
        <label>Agency Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Agency_Phone__c</fullName>
        <description>Field to hold the phone number of the agency contact listed on the Ad Campaign.</description>
        <label>Agency Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Agency_Reference__c</fullName>
        <description>Enter Agency Reference/PO Number here, is applicable.</description>
        <inlineHelpText>Enter Agency Reference/PO Number here, is applicable.</inlineHelpText>
        <label>Agency Reference</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Booking_Date__c</fullName>
        <label>Booking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Briefing_Date__c</fullName>
        <label>Briefing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_End_Date__c</fullName>
        <label>Campaign End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Start_Date__c</fullName>
        <label>Campaign Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Checking_Copy_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Checking Copy Contact.</description>
        <label>Checking Copy Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>IO&apos;s (Checking Copy Contact)</relationshipLabel>
        <relationshipName>R00N30000002NOaEEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Services_Email__c</fullName>
        <inlineHelpText>Email address of the Client Services agent associated with the IO</inlineHelpText>
        <label>Client Services Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Client_Services_Name__c</fullName>
        <inlineHelpText>Holds the name of the Client Services agent associated with the IO.</inlineHelpText>
        <label>Client Services Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Services_Phone__c</fullName>
        <inlineHelpText>Phone number of the Client Services agent associated with the IO</inlineHelpText>
        <label>Client Services Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Competitive_Separation_Instructions__c</fullName>
        <description>Competitive separation instructions as supplied by the client/agency.</description>
        <label>Competitive Separation Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PO_Number__c</fullName>
        <label>PO Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Positioning_Offered__c</fullName>
        <description>Detailed description of positioning offered to client/agency.</description>
        <label>Positioning Offered</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Agency_Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary buyer agency for the Account.</description>
        <label>Agency (Buyer)</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>R00N30000002NOa6EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Agency_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary Contact from Buyer Agency.</description>
        <label>Agency Contact (Buyer)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>R00N30000002NOa7EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Client_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary client Contact.</description>
        <label>Primary Client Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts (Primary Client Contact)</relationshipLabel>
        <relationshipName>R00N30000002NOa8EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Industry__c</fullName>
        <label>Product Industry</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary production contact.</description>
        <label>Production Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>IO&apos;s (Production Contact)</relationshipLabel>
        <relationshipName>R00N30000002NOaDEAW</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date Contract received.</description>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Email__c</fullName>
        <inlineHelpText>Email address of the Sales Rep associated with the IO</inlineHelpText>
        <label>Sales Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Phone__c</fullName>
        <inlineHelpText>Phone number of the Sales Rep associated with IO.</inlineHelpText>
        <label>Sales Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Unit_Rate__c</fullName>
        <description>Calculated unit rate.</description>
        <label>Unit Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unit_Size__c</fullName>
        <description>Size of unit for advertiser campaign.  Used in conjunction with Rate.</description>
        <label>Unit Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PG 4C</fullName>
                </value>
                <value>
                    <fullName>SP 4C</fullName>
                </value>
                <value>
                    <fullName>PG BW</fullName>
                </value>
                <value>
                    <fullName>SP BW</fullName>
                </value>
                <value>
                    <fullName>2 Consecutive PG 4C</fullName>
                </value>
                <value>
                    <fullName>1/3 PG 4C</fullName>
                </value>
                <value>
                    <fullName>1/3 PG BW</fullName>
                </value>
                <value>
                    <fullName>1/2 vertical 4C</fullName>
                </value>
                <value>
                    <fullName>1/2 horizontal 4C</fullName>
                </value>
                <value>
                    <fullName>1/2 vertical BW</fullName>
                </value>
                <value>
                    <fullName>1/2 horizontal BW</fullName>
                </value>
                <value>
                    <fullName>2/3 PG 4C</fullName>
                </value>
                <value>
                    <fullName>2/3 PG BW</fullName>
                </value>
                <value>
                    <fullName>2/3 Page Bookends</fullName>
                </value>
                <value>
                    <fullName>Gatefold 4PG</fullName>
                </value>
                <value>
                    <fullName>Gatefold 3PG</fullName>
                </value>
                <value>
                    <fullName>Advertorial 4C</fullName>
                </value>
                <value>
                    <fullName>Spreadvetorial 4C</fullName>
                </value>
                <value>
                    <fullName>PG 4C + 1/3 PG 4C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
</CustomObject>